???? 1.2.?.?

    user visible changes client:
    * Allow multiple guids per IID

    programmer visible changes:
    * removed readline and colorama from test_import - they are needed only for interactive mode and should not create an error on compilation.

3/1/2016 1.1.1.0

    user visible changes client:
    * sync-folder-manifest.txt is created if ECHO_LOG_FILE is supplied and in the same folder.
    * Weird variable name __USRER_ID__ renamed __USER_ID__
    * Mac: add -m a+rwx to all mkdir commands, mkdir_with_owner is now 'mkdir -p -m a+rwx "$1"' & 'chown $(__USER_ID__): "$1"'
    * Win: robocopy /R:9 /W1 instead of /R:3 /W:3
    * Win: added GOTO EXIT_ON_ERROR if cd or mkdir failed
    * Added progress steps after cd and mkdir operations
    * Mac: New command: mac-dock to add, remove items to the dock and to restart the dock.

    user visible changes, admin:
    * Check that admin commands run only under Mac or Linux
    * Adjusted InstlAdmin.create_links_for_revision to work on Mac

    programmer visible changes:
    * Added dockutils from https://github.com/kcrawford/dockutil

28/12/2015 1.1.0.2

    user visible changes client:
    * Mac: Separated changing of permission from rsync, because it prevented rsync
        from created hardlinks.
    * Removed ".svn" from COPY_IGNORE_PATTERNS, it's no longer relevant.

20/12/2015 1.1.0.1

    user visible changes client:
    * Windows: Some cmd tools are located if they are not in one of the PATH folders.
        The list of such tools is in "CMD_TOOLS_TO_FIND" & "CMD_TOOLS_TO_FIND_INTERNAL" variabless.

31/11/2015 1.1.0.0

    user visible changes client:
    * new doit command for fast and easy actions that do not require sync/copy

26/11/2015 1.0.1.5

    user visible changes client:
    * Added sorting to some lists that use to create the install instaructions.
        This will make the produced batch files more consitant from run to run and enable comparing before/after changes

17/11/2015 1.0.1.4
